# coil-winder

./: .gitmodules  CMakeLists.txt  Coil_Winder_Code_V2_WithStepper.ino  New_Wire_Follower.blend  README.md
3d-printed-parts/: LICENSE.txt  README.txt
3d-printed-parts/files/: Balance_Foot.STL  Base_Plate.STL  Bearing_Block.STL  Bottom_Bracket_A.STL  Bottom_Bracket_B.STL  Button.stl  Console_Case.STL  Console_Case_truncated.stl  FacePlate.stl  Fixed_Brake_Block.stl  Follower_Adapter.stl  Hall_Sensor_Block.STL  Left_Block.stl  Limit_Switch_Stickout.stl  Motor_Adapter.STL  New_Idler.stl  New_Rotor.stl  New_Wire_Follower.stl  Right_Block.stl  Screw_Sleeve.stl  ShaftLock.stl  Stepper_Block_V2.STL  Wire_Follower.stl  Wire_Spool_Rail_Block.STL
3d-printed-parts/files/old_unused/: Rail_Rider.STL  Winder_Motor_Mount.STL
design-resources/: New_Wire_Follower.blend  New_Wire_Follower.blend1  self-wind-test.txt
firmware/: CMakeLists.txt  firmware.c  lcd.c  lcd.h  quadrature_encoder.pio
schematics/coil_winder/: .gitignore  coil_winder.kicad_pro  coil_winder.kicad_sch  fp-info-cache
